fix: accessibility for Actions and Sharing components, contrasts and focus colors

--- a/theme/ItaliaTheme/Components/_sharing.scss
+++ b/theme/ItaliaTheme/Components/_sharing.scss
@@ -1,6 +1,13 @@
 .page-sharing,
 .page-actions {
+  .btn-dropdown:focus {
+    border-color: hsl(36deg, 100%, 50%);
+    box-shadow: 0 0 0 2px hsl(36deg, 100%, 50%);
+    outline: none;
+  }
   .link-list-wrapper {
+    z-index: 10;
+    position: relative;
     ul {
       li {
         a.list-item,
@@ -14,6 +21,13 @@
 
         button.btn-link {
           width: 100%;
+          border-radius: 0;
+
+          &:focus {
+            border-color: hsl(36deg, 100%, 50%);
+            box-shadow: 0 0 0 2px hsl(36deg, 100%, 50%);
+            outline: none;
+          }
         }
       }
     }
